Created necessary services and models

--- a/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
@@ -5,6 +5,9 @@
         [class.selected]="item===selectedItem">
             {{item.label}}
         </li>
+        <li *ngFor="let thing of things">
+            {{thing.label}}
+        </li>
     </ul>
 </div>
 <app-item-detail [item]="selectedItem"></app-item-detail>
