--- a/ui/org.openhab.ui.automation/web-src/src/app/components/item-detail/item-detail.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/item-detail/item-detail.component.html
@@ -2,4 +2,5 @@
   <h2>{{item.label}} details!</h2>
   <div><label>name: </label>{{item.name}}</div>
   <div><label>state: </label>{{item.state}}</div>
+  <div *ngIf="item.stateDescription"><label>statedescription: </label> {{item.stateDescription | json}}</div>
 </div>
