--- a/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.css
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.css
@@ -10,7 +10,7 @@ h1 {
  .heroes {
    margin: 0 0 2em 0;
    list-style-type: none;
-   padding: 0;
+   padding: 10;
    width: 15em;
  }
  .heroes li {
@@ -19,7 +19,7 @@ h1 {
    left: 0;
    background-color: #EEE;
    margin: .5em;
-   padding: .3em 0;
+   padding: 1.3em 0;
    height: 1.6em;
    border-radius: 4px;
  }
