--- a/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
@@ -3,11 +3,8 @@
         <li *ngFor="let item of items"
         (click)="onSelect(item)"
         [class.selected]="item===selectedItem">
-            {{item.name}} <br>
-            {{item.item.label}}
-        </li>
-        <li *ngFor="let thing of things">
-            {{thing.label}}
+            {{item.thingName}} <br>
+            {{item.label}}
         </li>
     </ul>
 </div>
