Added a list of conditions and a list of actions

--- a/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
@@ -1,11 +1,14 @@
-<div align="center">
-    <ul class="heroes">
-        <li *ngFor="let item of items"
-        (click)="onSelect(item)"
-        [class.selected]="item===selectedItem">
-            {{item.thingName}} <br>
-            {{item.label}}
-        </li>
-    </ul>
+<div *ngIf="items" class="itemsdiv">
+    <ul class="items">
+        <li *ngFor="let item of items">
+            <div class="inner-item"
+            (click)="onSelect(item)"
+            (click)="modal.show()"
+            [class.selected]="selectedItems.indexOf(item) > -1">
+               {{item.thingName}} <br>
+               {{item.label}}
+            </div>        
+         </li>
+     </ul>
 </div>
-<app-item-detail [item]="selectedItem"></app-item-detail>
+<app-condition [item]="selectedItem" #modal></app-condition>
