--- a/ui/org.openhab.ui.automation/web-src/src/app/components/condition/condition.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/condition/condition.component.html
@@ -1,3 +1,17 @@
-<p>
-  condition works!
-</p>
+<div *ngIf="item" (click)="onContainerClicked($event)" class="modal fade" tabindex="-1" role="dialog"
+     [ngClass]="{'in': visibleAnimate}"
+     [ngStyle]="{'display': visible ? 'block' : 'none', 'opacity': visibleAnimate ? 1 : 0}">
+	<div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" (click)="hide()"><span>&times;</span></button>
+        <h4 class="modal-title">Create condition</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" (click)="hide()">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+	</div>
+</div>
