--- a/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.css
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.css
@@ -1,52 +1,6 @@
-h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
+.itemsdiv {
+    background-color:#f1f1f1;
+    padding:0.01em 16px;
+    margin:20px 0;
+    box-shadow:0 2px 4px 0 rgba(0,0,0,0.16),0 2px 1000px 0 rgba(0,0,0,0.12)!important
 }
- .selected {
-   background-color: #CFD8DC !important;
-   color: white;
- }
- .heroes {
-   margin: 0 0 2em 0;
-   list-style-type: none;
-   padding: 10;
-   width: 15em;
- }
- .heroes li {
-   cursor: pointer;
-   position: relative;
-   left: 0;
-   background-color: #EEE;
-   margin: .5em;
-   padding: 1.3em 0;
-   height: 1.6em;
-   border-radius: 4px;
- }
- .heroes li.selected:hover {
-   background-color: #BBD8DC !important;
-   color: white;
- }
- .heroes li:hover {
-   color: #607D8B;
-   background-color: #DDD;
-   left: .1em;
- }
- .heroes .text {
-   position: relative;
-   top: -3px;
- }
- .heroes .badge {
-   display: inline-block;
-   font-size: small;
-   color: white;
-   padding: 0.8em 0.7em 0 0.7em;
-   background-color: #607D8B;
-   line-height: 1em;
-   position: relative;
-   left: -1px;
-   top: -4px;
-   height: 1.8em;
-   margin-right: .8em;
-   border-radius: 4px 0 0 4px;
- }
