--- a/ui/org.openhab.ui.automation/web-src/src/styles.css
+++ b/ui/org.openhab.ui.automation/web-src/src/styles.css
@@ -1,1 +1,98 @@
-/* You can add global styles to this file, and also import other style files */
+.selected {
+    background-color: #CFD8DC !important;
+    color: white;
+  }
+  .items {
+    list-style-type: none;
+  }
+  .items li {
+    width: 33%;
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  .inner-item {
+    background-color: #EEE;
+    margin: .5em;
+    padding: .3em 0;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  .inner-item.selected:hover {
+    background-color: #BBD8DC !important;
+    color: white;
+  }
+  .inner-item:hover {
+    color: #607D8B;
+    background-color: #DDD;
+    left: .1em;
+  }
+  .inner-item .text {
+    position: relative;
+  }
+  
+  /* The Modal (background) */
+ .modal {
+   display: none; /* Hidden by default */
+   position: fixed; /* Stay in place */
+   z-index: 1; /* Sit on top */
+   left: 0;
+   top: 0;
+   width: 100%; /* Full width */
+   height: 100%; /* Full height */
+   overflow: auto; /* Enable scroll if needed */
+   background-color: rgb(0,0,0); /* Fallback color */
+   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+ }
+
+/* The Close Button */
+ .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+ }
+
+ .close:hover,
+ .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+ }
+ /* Modal Header */
+.modal-header {
+    padding: 2px 16px;
+}
+
+/* Modal Body */
+.modal-body {padding: 2px 16px;}
+
+/* Modal Footer */
+.modal-footer {
+    padding: 2px 16px;
+}
+
+/* Modal Content */
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    border: 1px solid #888;
+    width: 50%; /* Could be more or less, depending on screen size */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s;    
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {top: -300px; opacity: 0} 
+    to {top: 0; opacity: 1}
+}
+
+@keyframes animatetop {
+    from {top: -300px; opacity: 0}
+    to {top: 0; opacity: 1}
+}
