--- a/ui/org.openhab.ui.automation/web-src/src/app/app.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/app.component.html
@@ -2,5 +2,6 @@
   <h1>
     {{titleText}}
   </h1>
-  <app-create></app-create>
+  <a routerLink="/create">Create</a>
+  <router-outlet></router-outlet>
 </div>
