--- a/ui/org.openhab.ui.automation/web-src/src/app/components/condition/condition.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/condition/condition.component.html
@@ -4,14 +4,14 @@
 	<div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" (click)="hide()"><span>&times;</span></button>
-        <h4 class="modal-title">Create condition</h4>
+        <h4 class="modal-title"><ng-content select=".app-modal-header"></ng-content></h4>
       </div>
       <div class="modal-body">
-        ...
+        <ng-content select=".app-modal-body"></ng-content>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" (click)="hide()">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary" (click)="save()">Save changes</button>
       </div>
 	</div>
 </div>
