Added overview component and some routing

--- a/ui/org.openhab.ui.automation/web-src/src/app/components/create/create.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/create/create.component.html
@@ -1,3 +1,4 @@
+<a routerLink="/overview">Overview</a>
 <div *ngIf="isLoading" class="loader"></div>
 <div *ngIf="!isLoading" class="creatediv">
     <div class="itemsdiv">
