--- a/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="isLoading" class="loader"></div>
-<div *ngIf="!isLoading">
+<div *ngIf="!isLoading" class="overviewdiv">
 	<div *ngIf="rules" class="itemsdiv">
 	    <ul class="items">
 	        <li *ngFor="let rule of rules">
