Continued working on creating rules, and changed routing method

--- a/ui/org.openhab.ui.automation/web-src/src/app/app.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div style="text-align:center">
-  <h1>
-    {{titleText}}
-  </h1>
-   <router-outlet></router-outlet>
+<div style="text-align: center">
+	<div>
+		<h1>{{titleText}}</h1>
+		<a routerLink="/overview">Overview</a>
+	</div>
+	<router-outlet></router-outlet>
 </div>
