--- a/ui/org.openhab.ui.automation/web-src/src/styles.css
+++ b/ui/org.openhab.ui.automation/web-src/src/styles.css
@@ -79,7 +79,7 @@
     margin: 15% auto; /* 15% from the top and centered */
     border: 1px solid #888;
     width: 45%; /* Could be more or less, depending on screen size */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    /*box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);*/
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
     animation-name: animatetop;
@@ -141,4 +141,8 @@
 @keyframes animatebottom { 
   from{ bottom:-100px; opacity:0 } 
   to{ bottom:0; opacity:1 }
+}
+
+div[hidden] {
+	display: none !important;
 }
