--- a/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
@@ -5,7 +5,7 @@
 	        <li *ngFor="let rule of rules">
 	            <div class="inner-item">
 	               {{rule.name}} <br>
-	               {{rule.uid}}
+	               {{rule.description}}
 	            </div>        
 	         </li>
 	     </ul>
