--- a/ui/org.openhab.ui.automation/web-src/src/styles.css
+++ b/ui/org.openhab.ui.automation/web-src/src/styles.css
@@ -1,4 +1,5 @@
-.selected {
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+.selecteditem {
     background-color: #CFD8DC !important;
     color: white;
   }
