Removed bootstrap and added fourth step to create wizard

--- a/ui/org.openhab.ui.automation/web-src/src/app/app.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div style="text-align: center">
-	<div>
-		<h1>{{titleText}}</h1>
-		<a routerLink="/overview">Overview</a>
-	</div>
-	<router-outlet></router-outlet>
+	<section class="mat-typography">
+		<div>
+			<h1>{{titleText}}</h1>
+			<a routerLink="/overview">Overview</a>
+		</div>
+		<router-outlet></router-outlet>
+	</section>
 </div>
