--- a/ui/org.openhab.ui.automation/web-src/src/app/components/modal/modal.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/modal/modal.component.html
@@ -55,8 +55,8 @@
 			</div>
 		</div>
 		<div class="modal-footer">
-			<button type="button" class="btn btn-default" (click)="hide()">Close</button>
-			<button type="button" class="btn btn-primary" (click)="save()">Save changes</button>
+		    <button mat-raised-button (click)="hide()">Close</button>
+			<button mat-raised-button color="primary" (click)="save()">Save changes</button>
 		</div>
 	</div>
 </div>
