--- a/ui/org.openhab.ui.automation/web-src/src/styles.css
+++ b/ui/org.openhab.ui.automation/web-src/src/styles.css
@@ -1,4 +1,7 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+body {
+	overflow-x:hidden;
+}
 .selecteditem {
     background-color: #CFD8DC !important;
     color: white;
@@ -70,8 +73,7 @@
 
 /* Modal Footer */
 .modal-footer {
-    padding: 2px 16px;
-}
+    padding: 2px 16px;}
 
 /* Modal Content */
 .modal-content {
@@ -97,32 +99,6 @@
     from {top: -300px; opacity: 0}
     to {top: 0; opacity: 1}
 }
-.loader {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  z-index: 1;
-  width: 75px;
-  height: 75px;
-  margin: -75px 0 0 -75px;
-  border: 16px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 16px solid #3498db;
-  width: 120px;
-  height: 120px;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
-}
-
-@-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
 
 /* Add animation to "page content" */
 .animate-from-right {
@@ -134,12 +110,12 @@
 }
 
 @-webkit-keyframes animatefromright {
-  from { left:100px; opacity:0 } 
+  from { left:50%; opacity:0 } 
   to { left:0px; opacity:1 }
 }
 
 @keyframes animatefromright { 
-  from{ left:100px; opacity:0 } 
+  from{ left:50%; opacity:0 } 
   to{ left:0; opacity:1 }
 }
 
