--- a/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
@@ -1,14 +1,17 @@
-<div *ngIf="isLoading" class="loader"></div>
+<div *ngIf="isLoading" class="loader">
+	<mat-progress-spinner color="primary" mode="indeterminate"> </mat-progress-spinner>
+</div>
 <div *ngIf="!isLoading" class="overviewdiv">
-	<div *ngIf="rules" class="itemsdiv">
-	    <ul class="items">
-	        <li *ngFor="let rule of rules">
-	            <div class="inner-item">
-	               {{rule.name}} <br>
-	               {{rule.description}}
-	            </div>        
-	         </li>
-	     </ul>
-	</div>
-<button type="button" class="btn btn-default" (click)="goBack()">Back</button>
+	
+	<mat-list class="rules"> <mat-list-item *ngFor="let rule of rules" class="inner-rule" style="width:100%">
+		<h3 matLine style="width: 55%"><b>{{rule.name}}</b></h3>
+		<span matLine style="width: 55%">{{rule.description}}</span>
+		<span matLine style="width: 55%">{{rule.uid}}</span>
+		<mat-slide-toggle class="example-margin" color="primary" style="width: 15%; height: auto;"></mat-slide-toggle>
+		<div style="width: 15%"><button mat-icon-button><mat-icon>edit</mat-icon></button></div>
+		<div style="width: 15%"><button mat-icon-button><mat-icon>delete</mat-icon></button></div>
+	</mat-list-item> </mat-list>
+	<div class="button-row">
+        <button mat-fab color="primary" (click)="openCreate(false)"><mat-icon>add</mat-icon></button>
+    </div>
 </div>
