--- a/ui/org.openhab.ui.automation/web-src/src/styles.css
+++ b/ui/org.openhab.ui.automation/web-src/src/styles.css
@@ -2,38 +2,6 @@
 body {
 	overflow-x:hidden;
 }
-.selecteditem {
-    background-color: #CFD8DC !important;
-    color: white;
-  }
-  .items {
-    list-style-type: none;
-  }
-  .items li {
-    width: 33%;
-    position: relative;
-    display: inline-block;
-    vertical-align: middle;
-  }
-  .inner-item {
-    background-color: #EEE;
-    margin: .5em;
-    padding: .3em 0;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  .inner-item.selected:hover {
-    background-color: #BBD8DC !important;
-    color: white;
-  }
-  .inner-item:hover {
-    color: #607D8B;
-    background-color: #DDD;
-    left: .1em;
-  }
-  .inner-item .text {
-    position: relative;
-  }
   
   /* The Modal (background) */
  .modal {
@@ -81,7 +49,7 @@ body {
     background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
     border: 1px solid #888;
-    width: 45%; /* Could be more or less, depending on screen size */
+    width: 60%; /* Could be more or less, depending on screen size */
     /*box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);*/
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
@@ -121,4 +89,15 @@ body {
 
 div[hidden] {
 	display: none !important;
+}
+
+.loader {
+    display: inline-block;
+    /* If worried about IE7 and IE6, add the two next lines */
+    *display: inline;
+    *zoom: 1;
+    float: middle;
+    clear:both;
+    margin: 20px;
+    float: middle;
 }
