Changed to Material Modal

--- a/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
@@ -9,8 +9,8 @@
          </li>
      </ul>
 </div>
-<app-modal [thing]="selectedThing" [modalType]="thingType" (onSelected)="addThingToSelected(selectedThing)" #modal>
+<!-- <app-modal [thing]="selectedThing" [modalType]="thingType" (onSelected)="addThingToSelected(selectedThing)" #modal>
     <div class="app-modal-header">
       {{getModalHeader()}}
     </div>
-</app-modal>
+</app-modal> -->
