Implemented enable/disable rule

--- a/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
@@ -7,7 +7,7 @@
 		<h3 matLine style="width: 55%"><b>{{rule.name}}</b></h3>
 		<span matLine style="width: 55%">{{rule.description}}</span>
 		<span matLine style="width: 55%">{{rule.uid}}</span>
-		<mat-slide-toggle class="example-margin" color="primary" style="width: 15%; height: auto;"></mat-slide-toggle>
+		<mat-slide-toggle [checked]="rule.enabled" (change)="enableDisableRule(rule)" color="primary" style="width: 15%; height: auto;"></mat-slide-toggle>
 		<div style="width: 15%"><button mat-icon-button><mat-icon>edit</mat-icon></button></div>
 		<div style="width: 15%"><button mat-icon-button (click)="deleteRule(rule)"><mat-icon>delete</mat-icon></button></div>
 	</mat-list-item> </mat-list>
